...
            "state" : "translated",
            "value" : "男性"
          }
        }
      }
    },
    "登录" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sign in"
          }
...
            "state" : "translated",
            "value" : "正在載入簽名"
          }
        }
      }
    },
    "简介" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Description"
          }
...
